@@ -1,3 +1,5 @@
+* BUGFIX: Memory leak in several KSI_TlvElement_* functions fixed.
+
 Version 3.20
 
 2019-10-07 release(3.20.3025)
